# fastapi_hotels

./: .dev.env  .dockerignore  .gitignore  .pre-commit-config.yaml  .test.env  Dockerfile  docker-compose.test.yaml  docker-compose.yml  grafana-dashboard.json  prometheus.yml  pyproject.toml  readme.md
app/: config.py  database.py  exceptions.py  main.py  middleware.py
app/admin/: auth.py  setup_admin.py  views.py
app/auth/: dao.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  utils.py
app/bookings/: dao.py  exceptions.py  models.py  router.py  schemas.py
app/dao/: base.py
app/hotels/: dao.py  exceptions.py  models.py  router.py  schemas.py
app/images/: exceptions.py  router.py  schemas.py
app/tasks/: config.py  tasks.py  utils.py
data/: initial.sql  initial_rooms.sql
docker/: app.sh  celery.sh  setup_test_data.sh
migrations/: env.py
migrations/versions/: 2023_07_09_0149-6e8995f2750f_initial_migration.py  2023_07_09_0230-19d9f6e9726e_added_hotels_rooms_bookings_users.py  2023_07_16_2113-07127758a87c_rename_image_id_to_image_url_chanedtype_.py  2023_07_16_2343-7a22e2ede925_added_stars_description_columns_and_.py  2023_07_17_0117-b032b154e6d1_added_city_address_to_hotels.py  2023_07_17_0146-5cd5dce283b3_added_nullable_args_to_hotels.py  2023_07_17_0147-7c156448b25e_added_nullable_address_arg_to_hotels.py  2023_07_19_1550-5dde168e56fd_addedhotelsusers_table.py  2023_07_19_1559-972a82b5dbba_renamed_hotelsusers_users_id_to_user_id.py  2023_07_19_1612-52a6bb7d1958_added_unique_constraint_to_hotelsusers.py  (+17 more)
tests/: conftest.py
(+22 files in other folders)
