[tool.poetry]
name = "fastapi_hotels"
version = "0.1.0"
description = ""
authors = ["igor <frakestolstm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.99.1"}
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
loguru = "^0.7.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-dotenv = "^0.5.2"
httpx = "^0.24.1"
pytest-mock = "^3.11.1"

[tool.pyright]
include = ["app", "tests", "migrations/env.py"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
env_files = [".test.env"]
markers = [
    "http"
    # "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    # "serial",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
